src/tui/snapshots/tickets__tui__render__tests__board_card_footer_shows_tags.snap
---
source: src/tui/render.rs
expression: output
---
todo
┌📋 abc123────────────────────┐
│Fix login bug               │
└────────────── #tui #config ┘





h/l col j/k row H/L mv y copy
