src/tui/snapshots/tickets__tui__render__tests__board_card_renders_as_bordered_box_with_id_in_title.snap
---
source: src/tui/render.rs
expression: output
---
todo
┌📋 abc123────────────────────┐
│Fix login bug               │
└────────────────────────────┘





h/l col j/k row H/L mv y copy
