src/tui/snapshots/tickets__tui__render__tests__board_card_wraps_long_title.snap
---
source: src/tui/render.rs
expression: output
---
todo
┌📋 abc123────────────────────┐
│Fix the login bug on the    │
│home page                   │
└────────────────────────────┘






h/l col j/k row H/L mv y copy
