src/tui/snapshots/tickets__tui__render__tests__board_cards_clip_when_column_overflows.snap
---
source: src/tui/render.rs
expression: output
---
todo ↓
┌📋 aaa111────────────────────┐
│First ticket                │
└────────────────────────────┘
┌📋 bbb222────────────────────┐
│Second ticket               │
└────────────────────────────┘


h/l col j/k row H/L mv y copy
