src/tui/snapshots/tickets__tui__render__tests__board_renders_active_filter_indicator_after_enter.snap
---
source: src/tui/render.rs
expression: output
---
todo                       in-progress               done
┌📋 aaa111─────────────────┐
│Fix login bug            │
└─────────────────────────┘















filter: "log"  (Esc clears)
