src/tui/snapshots/tickets__tui__render__tests__board_renders_filter_prompt_while_typing.snap
---
source: src/tui/render.rs
expression: output
---
todo                       in-progress               done
┌📋 aaa111─────────────────┐
│Fix login bug            │
└─────────────────────────┘















/log
