src/tui/snapshots/tickets__tui__render__tests__board_renders_three_columns.snap
---
source: src/tui/render.rs
expression: output
---
todo                       in-progress               done
┌📋 aaa111─────────────────┐┌📋 bbb222────────────────┐
│Fix login bug            ││Add search              │
└─────────────────────────┘└────────────────────────┘















h/l col j/k row H/L mv y copy Enter view e edit n new / filter ? help q quit
