src/tui/snapshots/tickets__tui__render__tests__detail_view_renders_ticket_fields.snap
---
source: src/tui/render.rs
expression: output
---
todo                       in-progress               done
┌📋 abc123─────────────────┐
│Fix log┌  Detail    e edit    q/Esc back  ────────────────────────────┐
└───────│ID:      abc123                                               │
        │Title:   Fix login bug                                        │
        │Status:  todo                                                 │
        │Type:    task                                                 │
        │Created: 2000-01-01                                           │
        │Updated: 2000-01-01                                           │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        └──────────────────────────────────────────────────────────────┘

h/l columns  j/k tickets  H/L move  y copy id  Enter detail  e edit  n new  ? he
